--- a/Runtime/com.intothedev.loader.asmdef
+++ b/Runtime/com.intothedev.loader.asmdef
@@ -1,3 +1,14 @@
 {
-	"name": "com.intothedev.loader"
+    "name": "com.intothedev.loader",
+    "rootNamespace": "",
+    "references": [],
+    "includePlatforms": [],
+    "excludePlatforms": [],
+    "allowUnsafeCode": false,
+    "overrideReferences": false,
+    "precompiledReferences": [],
+    "autoReferenced": true,
+    "defineConstraints": [],
+    "versionDefines": [],
+    "noEngineReferences": false
 }
